force-app/src/objects/TR1__JobSearchActionSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JOB_SEARCH</fullName>
                    <default>true</default>
                    <label>Job Search</label>
                </value>
                <value>
                    <fullName>CANDIDATE_MATCH</fullName>
                    <label>Candidate Match</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__AdditionalSettings__c</fullName>
        <label>Additional Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__AppliesToPOI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The field shows if the action should be applied to the custom vacancy object (e.g. POI).</inlineHelpText>
        <label>Applies to Custom Vacancy Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__AppliesToTabs__c</fullName>
        <description>This field shows on which tab(s) action is used. Separator is &quot;;&quot; (semicolon)</description>
        <inlineHelpText>This field shows on which tab(s) action is used. Separator is &quot;;&quot; (semicolon)</inlineHelpText>
        <label>Applies to Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__AuraComponentDeveloperName__c</fullName>
        <inlineHelpText>Should contain the name for aura component you want to use as action in the following format &apos;&lt;namespace prefix&gt;:&lt;component name&gt;&apos;.
Case sensitive.</inlineHelpText>
        <label>Aura Component Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IconName__c</fullName>
        <inlineHelpText>Icon name from SLDS library in the following format : &lt;Icon type&gt;:&lt;Icon name&gt;</inlineHelpText>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__IsSingleAction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether the action will be performed on one record or several.</inlineHelpText>
        <label>Is Single Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ModalSize__c</fullName>
        <label>Modal Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MINIMAL</fullName>
                    <default>true</default>
                    <label>Minimal</label>
                </value>
                <value>
                    <fullName>SMALL</fullName>
                    <label>Small</label>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>LARGE</fullName>
                    <label>Large</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Search Action Setting</label>
    <pluralLabel>Job Search Action Settings</pluralLabel>
</CustomObject>